# prevue

./: .gitignore  README.md  meson.build
data/: meson.build
data/desktop/: meson.build  prevue.desktop
data/icons/: meson.build
data/minimap/: meson.build  minimap.edc
src/: config.c  config.h  image.c  image.h  ipc.c  ipc.h  main.c  meson.build  minimap.c  minimap.h  prevue.h
